--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
-body{
+* {
+    box-sizing: border-box;
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
 }
 
 #navbar{
@@ -13,30 +13,25 @@ body{
     left: 0;
     height: 50px;
     width: 100%;
-    background: coral;
+    background: rgb(0, 0, 0);
 }
 
-#navbar ul {
+#navbar div {
     display: flex;
-    list-style: none;
-    margin: 0;
-    padding: 0;
+    height: 100%;
+    align-items: center;
+    overflow: hidden;
 }
 
 .navbar-info a {
-    display: block;
     text-decoration: none;
-    color: rgb(174, 224, 208);
-    font-size: 1rem;
+    color: rgb(255, 255, 255);
     padding: 1rem;
-}
-
-li {
     font-size: 1.5rem;
 }
 
 .navbar-info a:hover {
-    background: rgb(236, 104, 104);
+    background: rgb(235, 124, 124);
     transition: 1s ease-in-out ;
 }
 
@@ -47,25 +42,31 @@ li {
     align-items: center;
     justify-content: center;
     background-size: cover;
-    background-color: rgb(56, 124, 129);
-}
-
-#welcome-section h1, h2{
-    margin: 0;
-    padding: 0;
+    background-color: rgb(0, 0, 0);
 }
 
 #welcome-section h1{
     font-size: 5rem;
-    color: rgb(158, 12, 41);
-    text-shadow: 2px 2px rgb(26, 26, 41);
+    color: rgb(255, 255, 255);
+    text-shadow: 2px 2px rgb(128, 128, 128);
 }
 
 #welcome-section h2{
     font-style: italic;
     font-size: 2rem;
-    color: rgb(138, 173, 9);
-    text-shadow: 2px 2px rgb(22, 88, 31);  
+    color: rgb(255, 255, 255);
+    text-shadow: 2px 2px rgb(148, 148, 148);  
+}
+
+.me-img{
+    margin-top: 25px;
+    border-radius: 50%;
+    height: 300px;
+    width: 300px;
+    overflow: hidden;
+    background-image: url(img/me.jpeg);
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 .about-me {
@@ -129,17 +130,16 @@ li {
     font-size: 1.3rem;
     text-decoration: none;
     color: rgb(255, 255, 255);
+    width: 100%;
 }
 
 .button-section{
-    display: block;
     text-align: center;
     background-color: rgba(114, 168, 230, 0.863);
     border-radius: 10px;
-    box-shadow: 0 0 23px rgba(0,0,0,0.7);
-    margin: 5px;
-    width: 90%;
+    padding: 15px;
 }
+
 
 .more{
     display: flex;
@@ -151,7 +151,6 @@ li {
     text-align: center;
     background-color: rgba(255, 255, 255, 0.39);
     border-radius: 10px;
-    box-shadow: 0 0 23px rgba(0,0,0,0.7);
     padding: 10px;
     margin: 15px;
 }
@@ -191,47 +190,64 @@ li {
     font-size: 3rem;
     padding: 10px;
     margin: 10px;
-    color: steelblue;
-    text-shadow: 2px 2px rgb(74, 74, 131);
+    color: rgb(0, 0, 0);
+    text-shadow: 2px 2px rgb(255, 255, 255);
 }
 
 #work div a:hover{ 
     transition: 1s ease;
-    color: rgb(231, 56, 56);
-    text-shadow: 2px 2px rgb(158, 58, 58);
+    color: rgb(255, 255, 255);
+    text-shadow: 2px 2px rgb(0, 0, 0);
 }
 
 .info-pj {
-    display: block;
     text-align: center;
     color: white;
     background-color: rgba(255, 255, 255, 0.363);
     border-radius: 10px;
-    box-shadow: 0 0 23px rgba(0,0,0,0.7);
-    margin: 5px;
-    width: 90%;
+    width: 100%;
+    margin-bottom: 7px;
 }
 
 #projects h1{
     font-size: 5rem;
-    color: rgb(12, 58, 158);
-    text-shadow: 2px 2px rgb(26, 26, 41);
+    color: rgb(246, 247, 248);
+    text-shadow: 2px 2px rgb(180, 180, 180);
 }
 
 @media only screen and (max-width: 815px) {
-    * {
-        font-size: 70%;
-    }
-
     .img-section {
         flex-direction: column;
     }
 
-    #navbar{
-        height: 100px;
+    .me-img{
+        border-radius: 50%;
+        padding: 60px;
+        height: 20px;
+        width: 20px;
     }
 
-    .navbar-info a{
-        font-size: 3rem;
+    #welcome-section h1{
+        font-size: 2rem;
     }
+
+    #welcome-section h2{
+        font-size: 1rem;
+    }
+
+    #work h1{
+        font-size: 2rem;
+    }
+
+    #projects h1{
+        font-size: 1rem;
+    }
+
+    .about-me{
+        width: 90%;
+    }
+
+    
+
+
 }
