--- a/style.css
+++ b/style.css
@@ -7,6 +7,10 @@
     font-family: 'Domine', serif;
 }
 
+body {
+    background-color: black;
+}
+
 #navbar{
     position: fixed;
     display: flex;
@@ -153,7 +157,7 @@
 }
 
 .more div{
-    display: block;
+    display: flex;
     text-align: center;
     background-color: rgba(255, 255, 255, 0.39);
     border-radius: 10px;
@@ -170,6 +174,7 @@
     text-decoration: none;
     color: white;
     padding: 15px;
+    text-align: center;
 }
 
 
@@ -267,7 +272,8 @@
         width: 90%;
     }
 
-    
-
+    .navbar-info a {
+        font-size: 1rem;
+    }
 
 }
